@@ -1,4 +1,4 @@
-# $NetBSD: mi,v 1.1314 2011/05/03 16:12:23 jruoho Exp $
+# $NetBSD: mi,v 1.1315 2011/05/09 08:51:09 manu Exp $
 #
 # Note: don't delete entries from here - mark them as "obsolete" instead.
 #
@@ -2566,6 +2566,7 @@
 ./usr/share/man/cat8/pcnfsd.0			man-nfsserver-catman	.cat
 ./usr/share/man/cat8/pdisk.0			man-sysutil-catman	.cat
 ./usr/share/man/cat8/peace.0			man-obsolete		obsolete
+./usr/share/man/cat8/perfused.0			man-perfuse-catman	.cat,perfuse
 ./usr/share/man/cat8/pfctl.0			man-pf-catman		pf,.cat
 ./usr/share/man/cat8/pflogd.0			man-pf-catman		pf,.cat
 ./usr/share/man/cat8/pfs.0				man-pf-catman		pf,.cat
@@ -5120,6 +5121,7 @@
 ./usr/share/man/html8/pcnfsd.html		man-nfsserver-htmlman	html
 ./usr/share/man/html8/pdisk.html		man-sysutil-htmlman	html
 ./usr/share/man/html8/peace.html		man-obsolete		obsolete
+./usr/share/man/html8/perfused.html		man-perfuse-htmlman	html,perfuse
 ./usr/share/man/html8/pfctl.html		man-pf-htmlman		pf,html
 ./usr/share/man/html8/pflogd.html		man-pf-htmlman		pf,html
 ./usr/share/man/html8/pfs.html			man-pf-htmlman		pf,html
@@ -7911,6 +7913,7 @@
 ./usr/share/man/man8/pcnfsd.8			man-nfsserver-man	.man
 ./usr/share/man/man8/pdisk.8			man-sysutil-man		.man
 ./usr/share/man/man8/peace.8			man-obsolete		obsolete
+./usr/share/man/man8/perfused.8			man-perfuse-man		.man,perfuse
 ./usr/share/man/man8/pfctl.8			man-pf-man		pf,.man
 ./usr/share/man/man8/pflogd.8			man-pf-man		pf,.man
 ./usr/share/man/man8/pfs.8				man-pf-man		pf,.man
